
[package]
name = "sol-program"
version = "0.0.1"
authors = ["vidhunv1@gmail.com"]
repository = ""
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]
test = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "1.3.17", default-features = false, optional = true }
thiserror = "1.0"
borsh = "0.7.1"

[lib]
name = "program"
crate-type = ["cdylib", "lib"]
