
[package]
name = "sol-program"
version = "0.0.1"
authors = ["vidhunv1@gmail.com"]
repository = ""
license = "Apache-2.0"
edition = "2018"

[features]
program = ["solana-sdk/program"]
test = ["solana-sdk/default"]
default = []
no-entrypoint = []

[dependencies]
solana-sdk = { version = "1.3.17", default-features = false }
thiserror = "1.0"
borsh-v = "0.7.3" # https://github.com/vidhunv1/borsh/

[dev-dependencies]
rand = { version = "0.7.0"}

[lib]
name = "program"
crate-type = ["cdylib", "lib"]
