
[package]
name = "sol-program"
version = "0.0.1"
authors = ["vidhunv1@gmail.com"]
repository = ""
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3.3"
solana-program = "1.7.10"
num-traits = "0.2"
thiserror = "1.0.24"
borsh = "0.9.1"

[dev-dependencies]
rand = { version = "0.7.0"}

[lib]
name = "program"
crate-type = ["cdylib", "lib"]
